# apps/backend/src/models/chat.model.ts
@@ -1,0 +1,11 @@
+import z from "zod";
+
+export const zChatRequest = z.object({
+  prompt: z.string().min(1, "prompt is required"),
+});
+
+export type ChatRequestDto = z.infer<typeof zChatRequest>;
+
+export type ChatResponse = {
+  response: string;
+};
